--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('D:\\release\\Mscore\\chekkiad\\Chekkiad.jks')
-            storePassword 'mocte$8316Zumac'
-            keyAlias 'ChekkiadBank'
-            keyPassword 'mocte$8317Zumac'
+            storeFile file('D:\\release\\Mscore\\vallapuzha\\vallapuzha_scb.jks')
+            storePassword 'RtGslmnOpt'
+            keyAlias 'vallapuzha_scb'
+            keyPassword 'RtGNLsrDo'
         }
 
         /* release {
@@ -67,7 +67,7 @@ android {
 
        // applicationId "com.mscore.porora"
        // applicationId "com.mscore.mezhuveli"
-      //  applicationId "com.mscore.kuttikkattoor"
+       // applicationId "com.mscore.kuttikkattoor"
       //  applicationId "com.mscore.cheranallurScb"
         //applicationId "com.mscore.kayanna"
 
@@ -79,7 +79,7 @@ android {
 //        applicationId "com.mscore.kumaramputhoor"
 //        applicationId "com.mscore.kattippara"
 //        applicationId "com.mscore.mananthavaady"
-//        applicationId "com.mscore.vallapuzha_scb"
+        applicationId "com.mscore.vallapuzha_scb"
 //        applicationId "com.mscore.cherukunu_scb"
 //        applicationId "com.mscore.naduvil_scb"
 //        applicationId "com.mscore.porora"
@@ -181,7 +181,7 @@ android {
       /* versionCode = 2
         versionName = '4.0.0'*/
         //kuttikattoor
-       /* versionCode = 2
+      /*  versionCode = 2
         versionName = '4.0.1'*/
        //cheranalloor
        /* versionCode = 8
