--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('D:\\release\\Mscore\\vallapuzha\\vallapuzha_scb.jks')
-            storePassword 'RtGslmnOpt'
-            keyAlias 'vallapuzha_scb'
-            keyPassword 'RtGNLsrDo'
+            storeFile file('D:\\release\\Mscore\\NEW MSCORE\\atholi\\atholimscorekeystore.jks')
+            storePassword '{.fLvd1DIuGD7Ptz'
+            keyAlias 'atholimscore'
+            keyPassword 'J.J\\JGD1V<!Q+uI7'
         }
 
         /* release {
@@ -27,35 +27,35 @@ android {
     aaptOptions {
         cruncherEnabled = false
     }
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0'
 
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         minSdkVersion 15
-        targetSdkVersion 29
-      //  applicationId "com.mscore.pss"
+        targetSdkVersion 30
+     //   applicationId "com.mscore.pss"
        // applicationId "com.mscore.parapanangadi"
        // applicationId "com.mscore.calicuttownbank"
         //applicationId "com.mscore.kulathupuzha"
 
-      //  applicationId "com.mscore.panniyankara"
-        //applicationId "com.mscore.meppayur"
+       // applicationId "com.mscore.panniyankara"
+       // applicationId "com.mscore.meppayur"
         //applicationId "com.mscore.chemancheri_scb"
-        //applicationId "com.mscore.pantheerankavu"
+      // applicationId "com.mscore.pantheerankavu"
 
        // applicationId "com.mscore.ulliyeri"
-      // applicationId "com.mscore.chathamangalam"
+       //applicationId "com.mscore.chathamangalam"
       //  applicationId "com.mscore.irinav_scb"
-    //    applicationId "com.mscore.nanminda"
-      //  applicationId "com.mscore.chekkiad"
+       // applicationId "com.mscore.nanminda"
+       // applicationId "com.mscore.chekkiad"
         //applicationId "com.mscore.perambra_rcb"
        // applicationId "com.mscore.Vayyattupuzha"
-       // applicationId "com.mscore.thekkumbagam"
+      //  applicationId "com.mscore.thekkumbagam"
        // applicationId "com.mscore.kotturscb"
-       // applicationId "com.mscore.atholi"
-        //applicationId "com.mscore.thiruvambady_scb"
+        applicationId "com.mscore.atholi"
+       // applicationId "com.mscore.thiruvambady_scb"
 
         //applicationId "com.mscore.cheruvannur"
        // applicationId "com.mscore.kumaramputhoor"
@@ -67,8 +67,8 @@ android {
 
        // applicationId "com.mscore.porora"
        // applicationId "com.mscore.mezhuveli"
-       // applicationId "com.mscore.kuttikkattoor"
-      //  applicationId "com.mscore.cheranallurScb"
+      //  applicationId "com.mscore.kuttikkattoor"
+        //applicationId "com.mscore.cheranallurScb"
         //applicationId "com.mscore.kayanna"
 
        // applicationId "com.mscore.vallapuzha_scb"
@@ -78,16 +78,21 @@ android {
 //        applicationId "com.mscore.cheruvannur"
 //        applicationId "com.mscore.kumaramputhoor"
 //        applicationId "com.mscore.kattippara"
-//        applicationId "com.mscore.mananthavaady"
-        applicationId "com.mscore.vallapuzha_scb"
+     //     applicationId "com.mscore.mananthavaady"
+    //    applicationId "com.mscore.vallapuzha_scb"
 //        applicationId "com.mscore.cherukunu_scb"
 //        applicationId "com.mscore.naduvil_scb"
 //        applicationId "com.mscore.porora"
 //        applicationId "com.mscore.mezhuveli"
 //        applicationId "com.mscore.kuttikkattoor"
-    //   applicationId "com.mscore.cheranallurScb"
+      // applicationId "com.mscore.cheranallurScb"
+      //  applicationId "com.mscore.amarambalam"
       // applicationId "com.mscore.kayanna"
       //  applicationId "com.mscore.parapanangadi"
+
+        /*meppayur*/
+       /* versionCode = 17
+        versionName = '4.0.5'*/
 //        versionCode = 24
 //        versionName = '5.0.2'
       /*  versionCode = 3
@@ -103,20 +108,18 @@ android {
         //CALICUT TOWN BANK
       /* versionCode = 15
         versionName = '4.0.3'*/
-       versionCode = 1
+      versionCode = 1
         versionName = '1.0.0'
         /*chemmanchery*/
        /* versionCode = 6
         versionName = '4.0.3'*/
 //panniyankara
-        /*versionCode = 11
-        versionName = '4.0.4'*/
+      /*  versionCode = 13
+        versionName = '4.0.6'*/
         /*pantheerankavu*/
-       /* versionCode = 5
-        versionName = '4.0.3'*/
-/*meppayur*/
-        /*versionCode = 17
-        versionName = '4.0.1'*/
+      /*  versionCode = 6
+        versionName = '4.0.4'*/
+
         //Ulliyeri
         /*versionCode = 2
         versionName = '4.0.1'*/
@@ -124,17 +127,17 @@ android {
        /* versionCode = 5
         versionName = '4.0.2'*/
         //chathamangalam
-      /*  versionCode = 3
-        versionName = '4.0.2'*/
+       /* versionCode = 4
+        versionName = '4.0.3'*/
         //irinav
        /* versionCode = 6
         versionName = '4.0.3'*/
         //nanminda
-      /*  versionCode = 18
-        versionName = '4.0.6'*/
+        /*versionCode = 19
+        versionName = '4.0.7'*/
         //chekkiad
-       /* versionCode = 3
-        versionName = '4.0.2'*/
+       /* versionCode = 4
+        versionName = '4.0.3'*/
         //perambra
        /* versionCode = 5
         versionName = '4.0.3'*/
@@ -142,14 +145,14 @@ android {
        /* versionCode = 7
         versionName = '4.0.2'*/
         //thekkubagam
-        /*versionCode = 7
+       /* versionCode = 7
         versionName = '4.0.2'*/
 //kottur
         /*versionCode = 2
         versionName = '4.0.1'*/
         //atholi
-       /* versionCode = 9
-        versionName = '4.0.4'*/
+      /* versionCode = 15
+        versionName = '4.1.0'*/
         //thiruvambadió
        /* versionCode = 7
         versionName = '4.0.3'*/
@@ -163,7 +166,7 @@ android {
       /*  versionCode = 10
         versionName = '4.0.2'*/
         //mananthavady
-       /* versionCode = 2
+      /*  versionCode = 2
         versionName = '4.0.0'*/
         //vallapuzha
        /* versionCode = 4
@@ -181,17 +184,20 @@ android {
       /* versionCode = 2
         versionName = '4.0.0'*/
         //kuttikattoor
-      /*  versionCode = 2
+        /*versionCode = 2
         versionName = '4.0.1'*/
        //cheranalloor
-       /* versionCode = 8
-        versionName = '4.0.7'*/
-
+     /*   versionCode = 9
+        versionName = '4.0.8'*/
+  /*   kayanna*/
        /* versionCode = 2
         versionName = '4.0.1'*/
-
+      //kottur
        /* versionCode = 2
         versionName = '4.0.1'*/
+        //amarambalam
+     /*   versionCode = 1
+        versionName = '4.0.0'*/
     }
 
     buildTypes {
@@ -219,7 +225,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:29.0.0'
+    implementation 'com.android.support:appcompat-v7:30.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
@@ -233,10 +239,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:29.0.0'
-    implementation 'com.android.support:cardview-v7:29.0.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
-    implementation 'com.android.support:support-v4:29.0.0'
+    implementation 'com.android.support:design:30.0.0'
+    implementation 'com.android.support:cardview-v7:30.0.0'
+    implementation 'com.android.support:recyclerview-v7:30.0.0'
+    implementation 'com.android.support:support-v4:30.0.0'
     implementation 'com.android.support:support-annotations:29.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -257,7 +263,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'me.relex:circleindicator:1.2.2@aar'
-    implementation 'com.android.support:design:29.0.0'
+    implementation 'com.android.support:design:30.0.0'
     implementation 'com.squareup.picasso:picasso:2.4.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
