--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 01 12:49:34 IST 2021
-sdk.dir=C\:\\Users\\dilsha\\AppData\\Local\\Android\\Sdk
+#Thu Dec 02 10:33:21 IST 2021
+sdk.dir=/Users/macbookair/Library/Android/sdk
