--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 14 15:15:54 IST 2021
-sdk.dir=C\:\\Users\\ranjithk\\AppData\\Local\\Android\\Sdk
+#Thu Dec 23 10:59:28 IST 2021
+sdk.dir=C\:\\Users\\Anusree\\AppData\\Local\\Android\\Sdk
