--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,14 @@
 
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
+        <activity android:name=".WalletServiceActivity"
+            android:label="Wallet Services"
+            android:parentActivityName=".HomeActivity"
+            android:theme="@style/HomeActivityTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.creativethoughts.iscore.HomeActivity" />
+        </activity>
         <activity android:name=".BalanceEnqActivity"
             android:label="Quick Balance"
             android:parentActivityName=".HomeActivity"
