--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ repositories {
 android {
 
     signingConfigs {
-        release {
+       /* release {
             storeFile file('D:\\Ranjith\\Mscore\\Atholi\\Keystore\\atholimscorekeystore.jks')
             storePassword '{.fLvd1DIuGD7Ptz'
             keyAlias 'atholimscore'
             keyPassword 'J.J\\JGD1V<!Q+uI7'
 //            v1SigningEnabled true
 //            v2SigningEnabled true
-        }
+        }*/
 
         /* release {
              storeFile file('D:\\Perfect\\Mscore\\CalicutCity\\calicutcitymscorekeystore.jks')
@@ -203,7 +203,7 @@ android {
     }
 
     buildTypes {
-       release {
+      /* release {
             lintOptions {
                 disable 'MissingTranslation'
                 checkReleaseBuilds false
@@ -212,7 +212,7 @@ android {
             minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        }*/
         debug {
             testCoverageEnabled = true
         }
