--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+<!--        tools:ignore="ScopedStorage"/>-->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <uses-permission android:name="android.permission.READ_CALENDAR"/>
@@ -35,7 +36,8 @@
         android:requestLegacyExternalStorage="true"
         android:largeHeap="true"
         android:theme="@style/AppTheme"
-        tools:replace="icon, label">
+        tools:replace="icon, label"
+        android:fullBackupContent="false">
       <!--  <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
