--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -293,6 +293,16 @@
         </activity>
 
         <activity
+            android:name=".MessageActivity"
+            android:label="Messages"
+            android:parentActivityName=".HomeActivity"
+            android:theme="@style/HomeActivityTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <activity
             android:name=".Recharge.KsebActivity"
             android:label="Kseb"
             android:parentActivityName=".HomeActivity"
