--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 11 13:29:07 IST 2022
-sdk.dir=C\:\\Users\\dilsha\\AppData\\Local\\Android\\Sdk
-#Sat Feb 12 13:17:33 IST 2022
-sdk.dir=D\:\\Software\\AndroidStudio\\SDK
+#Mon Feb 14 09:54:31 IST 2022
+sdk.dir=C\:\\Users\\ranjithk\\AppData\\Local\\Android\\Sdk
