--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 14 16:16:05 IST 2022
-sdk.dir=C\:\\Users\\ranjithk\\AppData\\Local\\Android\\Sdk
+#Tue Feb 15 12:02:02 IST 2022
+sdk.dir=C\:\\Users\\dilsha\\AppData\\Local\\Android\\Sdk
