--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 16 13:55:39 IST 2022
-sdk.dir=C\:\\Users\\dilsha\\AppData\\Local\\Android\\Sdk
+#Thu Feb 17 09:48:32 IST 2022
+sdk.dir=C\:\\Users\\ranjithk\\AppData\\Local\\Android\\Sdk
