--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
     signingConfigs {
         // HIDE
         release {
-            storeFile file('D:\\release\\Mscore\\NEW MSCORE\\kodiyathur\\kodiyathoormscore.jks')
-            storePassword 'bnS<AH4fnWV.}mZN'
-            keyAlias 'mscorekodiyathoor'
-            keyPassword 'z}by1LGD_J&Xh76f'
+            storeFile file('D:\\release\\Mscore\\NEW MSCORE\\calicut town bank\\calicut_town_bank.jks')
+            storePassword 'mocte$9012Zuma'
+            keyAlias 'Calicut Town Bank'
+            keyPassword 'mocte$9013Zuma'
 //            v1SigningEnabled true
 //            v2SigningEnabled true
         }
@@ -34,12 +34,13 @@ android {
         applicationId "com.mscore.pss"
        // applicationId "com.mscore.kodiyathoor"
       //  applicationId "com.mscore.kuruvattoor"
+       // applicationId "com.mscore.calicuttownbank"
 
        versionCode = 1
         versionName = '1.0.0'
-      /*  versionCode = 15
-       versionName = '4.0.4'*/
 
+       /* versionCode = 15
+        versionName = '4.0.0'*/
      /*   versionCode = 13
         versionName = '4.0.4'*/
 
