--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
     signingConfigs {
         // HIDE
         release {
-            storeFile file('D:\\release\\Mscore\\NEW MSCORE\\calicut town bank\\calicut_town_bank.jks')
-            storePassword 'mocte$9012Zuma'
-            keyAlias 'Calicut Town Bank'
-            keyPassword 'mocte$9013Zuma'
+            storeFile file('D:\\Ranjith\\Mscore\\Edacheri\\edacheri.jks')
+            storePassword 'mocte$8316Zuma'
+            keyAlias 'Edacheri Bank'
+            keyPassword 'mocte$8317Zuma'
 //            v1SigningEnabled true
 //            v2SigningEnabled true
         }
@@ -35,6 +35,14 @@ android {
        // applicationId "com.mscore.kodiyathoor"
       //  applicationId "com.mscore.kuruvattoor"
        // applicationId "com.mscore.calicuttownbank"
+//        applicationId "com.mscore.atholi"
+//        applicationId "com.mscore.amarambalam"
+//        applicationId "com.mscore.kalpathur"
+//        applicationId "com.mscore.naduvil_scb"
+//        applicationId "com.mscore.amarambalam"
+//        applicationId "com.mscore.kallanode"
+//        applicationId "com.mscore.kulathupuzha"
+//        applicationId "com.mscore.edacheri"
 
        versionCode = 1
         versionName = '1.0.0'
@@ -43,6 +51,9 @@ android {
         versionName = '4.0.0'*/
      /*   versionCode = 13
         versionName = '4.0.4'*/
+
+//        versionCode = 2
+//        versionName = '4.0.1'
 
     }
 
