--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,15 +35,28 @@ android {
        // applicationId "com.mscore.kodiyathoor"
       //  applicationId "com.mscore.kuruvattoor"
        // applicationId "com.mscore.calicuttownbank"
+     //   applicationId "com.mscore.citypolice"
+       // applicationId "com.mscore.telk"
+      //  applicationId "com.mscore.calicuttownbank"
+       // applicationId "com.mscore.nadamel"
 
-       versionCode = 1
+
+        versionCode = 1
         versionName = '1.0.0'
 
        /* versionCode = 15
         versionName = '4.0.0'*/
      /*   versionCode = 13
         versionName = '4.0.4'*/
-
+       /* versionCode = 2
+        versionName = '4.0.1'*/
+      /* versionCode = 3
+        versionName = '4.0.2'
+*/
+      /*  versionCode = 1
+        versionName = '4.0.0'*/
+       /* versionCode = 16
+        versionName = '4.0.4'*/
     }
 
     buildTypes {
