--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
     signingConfigs {
         // HIDE
         release {
-            storeFile file('D:\\Ranjith\\Mscore\\Chekkiad\\Credentials\\Chekkiad.jks')
-            storePassword 'mocte$8316Zumac'
-            keyAlias 'ChekkiadBank'
-            keyPassword 'mocte$8317Zumac'
+            storeFile file('D:\\release\\Mscore\\NEW MSCORE\\porora\\pororanew.jks')
+            storePassword '8GLNGT46PHDAJ663'
+            keyAlias 'porora'
+            keyPassword 'QUPC2DWVGLEVAR7D'
 //            v1SigningEnabled true
 //            v2SigningEnabled true
         }
@@ -31,7 +31,7 @@ android {
         multiDexEnabled true
         minSdkVersion 15
         targetSdkVersion 30
-        applicationId "com.mscore.pss"
+       // applicationId "com.mscore.pss"
 //        applicationId "com.mscore.demo"
 //        applicationId "com.mscore.koodali"
        // applicationId "com.mscore.kodiyathoor"
@@ -52,10 +52,13 @@ android {
 //        applicationId "com.mscore.nanminda"
 //        applicationId "com.mscore.cheranallurScb"
 //        applicationId "com.mscore.chekkiad"
+        applicationId "com.mscore.porora"
 
+       /* versionCode = 1
+        versionName = '1.0.0'*/
 
-        versionCode = 1
-        versionName = '1.0.0'
+        versionCode = 4
+        versionName = '4.0.3'
 
        /* versionCode = 15
         versionName = '4.0.0'*/
@@ -103,7 +106,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:30.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
-    implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
+  //  implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     implementation 'com.google.zxing:core:3.2.1'
