--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,10 @@ android {
     signingConfigs {
         // HIDE
         release {
-            storeFile file('D:\\Ranjith\\Mscore\\Telk\\Keystore\\telkmscore.jks')
-            storePassword 'telkmscore123'
-            keyAlias 'telkmscore'
-            keyPassword 'telkmscore123'
+            storeFile file('D:\\Ranjith\\Mscore\\Karthedom\\KeyStore\\karthedom.jks')
+            storePassword 'karthedomrcs#753'
+            keyAlias 'karthedomrcs'
+            keyPassword 'karthedomrcs#753'
 //            v1SigningEnabled true
 //            v2SigningEnabled true
         }
@@ -23,15 +23,15 @@ android {
     aaptOptions {
         cruncherEnabled = false
     }
-    compileSdkVersion 30
-    buildToolsVersion '30.0.0'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
 
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         minSdkVersion 15
-        targetSdkVersion 30
-//        applicationId "com.mscore.pss"
+        targetSdkVersion 31
+        applicationId "com.mscore.pss"
 //        applicationId "com.mscore.demo"
 //        applicationId "com.mscore.koodali"
        // applicationId "com.mscore.kodiyathoor"
@@ -45,7 +45,7 @@ android {
 //        applicationId "com.mscore.kulathupuzha"
 //        applicationId "com.mscore.edacheri"
 //        applicationId "com.mscore.citypolice"
-        applicationId "com.mscore.telk"
+//        applicationId "com.mscore.telk"
       //  applicationId "com.mscore.calicuttownbank"
        // applicationId "com.mscore.nadamel"
 //        applicationId "com.mscore.kuruvattoor"
@@ -61,7 +61,10 @@ android {
         versionName = '1.0.0'
 
 //        versionCode = 5
-//        versionName = '4.0.4'
+//        versionName = '4.0.1'
+
+//        versionCode = 4
+//        versionName = '4.0.0'
 
        /* versionCode = 15
         versionName = '4.0.0'*/
@@ -107,7 +110,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:30.0.0'
+    implementation 'com.android.support:appcompat-v7:31.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
   //  implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
@@ -121,10 +124,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:30.0.0'
-    implementation 'com.android.support:cardview-v7:30.0.0'
-    implementation 'com.android.support:recyclerview-v7:30.0.0'
-    implementation 'com.android.support:support-v4:30.0.0'
+    implementation 'com.android.support:design:31.0.0'
+    implementation 'com.android.support:cardview-v7:31.0.0'
+    implementation 'com.android.support:recyclerview-v7:31.0.0'
+    implementation 'com.android.support:support-v4:31.0.0'
     implementation 'com.android.support:support-annotations:29.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -145,7 +148,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'me.relex:circleindicator:1.2.2@aar'
-    implementation 'com.android.support:design:30.0.0'
+    implementation 'com.android.support:design:31.0.0'
     implementation 'com.squareup.picasso:picasso:2.4.0'
     implementation 'com.squareup.okhttp:okhttp:2.2.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
