--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 24 10:13:04 IST 2022
-sdk.dir=C\:\\Users\\ranjithk\\AppData\\Local\\Android\\Sdk
+#Thu Sep 22 11:35:55 IST 2022
+sdk.dir=C\:\\Users\\dilsha\\AppData\\Local\\Android\\Sdk
